(lang dune 2.8)
(name term)
(generate_opam_files true)

(package
 (name term)
 (synopsis "A library for terms in lambda-calculus-based languages")
 (depends basis context)
 (license LGPL-3.0)
 (maintainers "Jordy Dickinson <jordy.dickinson@icloud.com>")
 (authors "Jordy Dickinson <jordy.dickinson@icloud.com>")
 (homepage https://github.com/jordydickinson/context)
 (bug_reports https://github.com/jordydickinson/context/issues))